--- a/ai_studio_code.html
+++ b/ai_studio_code.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>מודל AI לפיתוח INI</title>
-       <link rel="icon" type="image/jpeg" href="ivr.jpg">        
+       <link rel="icon" type="image/jpeg" href="IVR.jpg">        
     <link rel="icon" href="https://www.gstatic.com/lamda/images/favicon_v1_70c80ffdf27202fd2e83f1e07f133c8a.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -195,7 +195,7 @@
                             <span class="material-icons" style="font-size: 48px;">code</span>
                         </div>
                     </div>
-                                        <img src="IVR.jpg" alt="לוגו2" width="200">
+                                        <img src="smllogo.jpg" alt="לוגו2" width="200">
                     <h1>שלום, אני תכנתי המתוכנת</h1>
                     <p>אני מודל AI לפיתוח קוד INI למערכות IVR של ימות המשיח. איך אני יכול לעזור לך היום?</p>
                     <div class="suggestion-cards">
