--- a/ai_studio_code.html
+++ b/ai_studio_code.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- After the sidebar div and before main-content div -->
-    <div class="history-sidebar" id="historySidebar" style="display: none;">
+    <div class="history-sidebar" id="historySidebar">
         <div class="sidebar-header">
         <button class="history-toggle" title="סגור/פתח הסטוריה">
             <span class="material-icons">menu</span>
