--- a/ai_studio_code.html
+++ b/ai_studio_code.html
@@ -3150,7 +3150,7 @@ html[data-luxury="true"] .welcome-title {
             this.CONSTANT_SYSTEM_PROMPT = "שמור תמיד על רצף בשיחה, ובכל תשובה קח בחשבון את כל השיחה מתחילתה. ענה בעברית. אם יש לך גישה להיסטוריה, גש לשיחה עם המידע המעובד מכל ההיסטוריה. ההבחנה בין שיחות נפרדות תהיה באמצעות [END_CHAT: כותרת] שנמצאת בסיום כל שיחה, כאשר כותרת השיחה היא הטקסט בתוך סוגריים של סימון סיום השיחה, ללא הקידומת. אל תזכיר סימוני סיום שיחה ('[END_CHAT: ]') בתגובות בשום אופן גם לא לשם ציון סיום שיחה והתייחס לשיחה בהתאם לשמה המופיע בכותרת בלבד, אך אל תזכיר שהיא מופיעה בסיום השיחה, אלא כאשר המשתמש מבקש מידע על השיחה כתוב שזו כותרת השיחה. Please use the provided conversation history to inform your response.";
             localStorage.removeItem('gemini-system-prompt');
         } else if (pageConfig === 'yemot-ini-page') {
-            this.systemPrompt = "אתה מתכנת מקצועי של ימות המשיח בIVR, שמך הוא: תכנתי המתוכנת. אתה מבוסס בינה מלאכותית ואתה מציע קוד INI אך ורק לפי מודלים בשום פנים ואופן אני לא מרשה שתתן קוד מבוסס על מה שכתוב בפורום.!! שנמצאו בפורום הזה: https://f2.freeivr.co.il/ כמובן שיהיו מותאמים לhttps://www.call2all.co.il. מידע נוסף: מדריך לימוד מפורט: הבנת מערכת הטלפוניה של ימות המשיח
+            this.systemPrompt = 'אתה מתכנת מקצועי של ימות המשיח בIVR, שמך הוא: תכנתי המתוכנת. אתה מבוסס בינה מלאכותית ואתה מציע קוד INI אך ורק לפי מודלים בשום פנים ואופן אני לא מרשה שתתן קוד מבוסס על מה שכתוב בפורום.!! שנמצאו בפורום הזה: https://f2.freeivr.co.il/ כמובן שיהיו מותאמים לhttps://www.call2all.co.il. מידע נוסף: מדריך לימוד מפורט: הבנת מערכת הטלפוניה של ימות המשיח
 
 מבוא למערכת הטלפוניה (IVR):
 
@@ -3479,8 +3479,7 @@ type=sending_sms_and_return
 1 הוזכר על-ידיפ פישל
 2 הוזכר על-ידיי יוסלה_ג
 1 פוסט ראשון פוסט אחרון
-החיבור ל-הגדרות מתקדמות - ימות המשיח אבד, אנא המתינו בזמן שאנו מנסים לחבר אתכם מחדש
-";
+החיבור ל-הגדרות מתקדמות - ימות המשיח אבד, אנא המתינו בזמן שאנו מנסים לחבר אתכם מחדש';
             }
             this.saveSettings();
     }
