--- a/ai_studio_code.html
+++ b/ai_studio_code.html
@@ -3304,7 +3304,7 @@
                         "החיבור ל-הגדרות מתקדמות - ימות המשיח אבד, אנא המתינו בזמן שאנו מנסים לחבר אתכם מחדש";
                 }
                 this.saveSettings();
-            }
+            
 
             isSystemPromptAllowed(systemPrompt) {
                 if (!systemPrompt) return false;
@@ -6230,3 +6230,7 @@
     </script>
 </body>
 </html>
+
+<!-- Injection By NetFree -->
+<script src="https://netfree.link/injection-script/go-payment.js" type="text/javascript" async  ></script>
+<script src="https://netfree.link/injection-script/popup-card-init.js" type="text/javascript" async  ></script>
